<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.merykitty</groupId>
  <artifactId>slp-processor</artifactId>
  <version>0.0.1</version>

  <name>slp-processor</name>
  <!-- FIXME change it to the project's website -->
  <url>http://www.example.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <junit.version>4.13.2</junit.version>
    <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
    <maven.clean.followSymLinks>false</maven.clean.followSymLinks>
    <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
    <maven-surefile-plugin.version>3.0.0-M5</maven-surefile-plugin.version>
    <maven-install-plugin.version>3.0.0-M1</maven-install-plugin.version>
    <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
    <project.resources.input>${project.basedir}/src/main/resources</project.resources.input>
    <project.resources.input.common>${project.resources.input}/common</project.resources.input.common>
    <project.resources.output>${project.basedir}/resources</project.resources.output>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20210307</version>
    </dependency>

    <dependency>
      <groupId>net.sourceforge.argparse4j</groupId>
      <artifactId>argparse4j</artifactId>
      <version>0.8.1</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
        <version>${maven-clean-plugin.version}</version>
        <configuration>
          <filesets>
            <fileset>
              <directory>resources</directory>
            </fileset>

            <fileset>
              <directory>target</directory>
            </fileset>

            <fileset>
              <directory>SLPProcessor</directory>
            </fileset>
          </filesets>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>${maven-resources-plugin.version}</version>
        <executions>
          <execution>
            <id>default-resources</id>
            <phase>none</phase>
          </execution>

          <execution>
            <id>package-copy-resources</id>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <phase>package</phase>
            <configuration>
              <outputDirectory>${project.basedir}/SLPProcessor/resources</outputDirectory>
              <resources>
                <resource>
                  <directory>${project.resources.output}</directory>
                  <excludes>
                    <exclude>*.properties</exclude>
                  </excludes>
                  <filtering>false</filtering>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <source>17</source>
          <target>17</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefile-plugin.version}</version>
        <configuration>
          <argLine>-Dforeign.restricted=permit</argLine>
          <trimStackTrace>false</trimStackTrace>
          <useFile>false</useFile>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>${exec-maven-plugin.version}</version>
        <executions>
            <execution>
            <id>create-executable</id>
            <goals>
              <goal>exec</goal>
            </goals>
            <phase>prepare-package</phase>
            <configuration>
              <executable>jpackage</executable>
              <arguments>
                <argument>-t</argument>
                <argument>app-image</argument>
                <argument>-d</argument>
                <argument>${project.basedir}</argument>
                <argument>-n</argument>
                <argument>SLPProcessor</argument>
                <argument>-p</argument>
                <modulepath/>
                <argument>-m</argument>
                <argument>io.github.merykitty.slpprocessor/io.github.merykitty.slpprocessor.Info</argument>
                <argument>--add-launcher</argument>
                <argument>SLPDecoder=${project.resources.output}/decoder.properties</argument>
                <argument>--add-launcher</argument>
                <argument>SLPEncoder=${project.resources.output}/encoder.properties</argument>
              </arguments>
            </configuration>
          </execution>

          <execution>
            <id>default-cli</id>
            <goals>
              <goal>exec</goal>
            </goals>
            <configuration>
              <executable>java</executable>
              <environmentVariables>
                <HOME_DIR>${project.basedir}</HOME_DIR>
              </environmentVariables>
              <arguments>
                <argument>--add-modules</argument>
                <argument>jdk.incubator.foreign</argument>
                <argument>-Dforeign.restricted=permit</argument>
                <argument>-XX:CompileThreshold=1000</argument>
                <argument>-XX:+UseParallelGC</argument>
                <argument>-XX:+UnlockDiagnosticVMOptions</argument>
                <argument>-XX:+UnlockExperimentalVMOptions</argument>
                <argument>-XX:+TrustFinalNonStaticFields</argument>
                <argument>-XX:StartFlightRecording:duration=600s,filename=profile.jfr,delay=30s,settings=strict.jfc</argument>
                <argument>-ea</argument>
                <argument>-p</argument>
                <classpath/>
                <argument>-cp</argument>
                <classpath/>
                <argument>io.github.merykitty.slpprocessor.Test</argument>
              </arguments>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>platform-unix-x64</id>
      <activation>
        <os>
          <family>unix</family>
        </os>
      </activation>
      <properties>
        <project.resources.input.unix-x64>${project.resources.input}/unix-x64</project.resources.input.unix-x64>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-resources-plugin</artifactId>
            <version>${maven-resources-plugin.version}</version>
            <executions>
              <execution>
                <id>process-resouces-unix-x64</id>
                <goals>
                  <goal>copy-resources</goal>
                </goals>
                <phase>process-resources</phase>
                <configuration>
                  <outputDirectory>${project.resources.output}</outputDirectory>
                  <resources>
                    <resource>
                      <directory>${project.resources.input.common}</directory>
                      <excludes>
                        <exclude>**/*.cpp</exclude>
                        <exclude>**/.vscode/**</exclude>
                      </excludes>
                      <filtering>false</filtering>
                    </resource>

                    <resource>
                      <directory>${project.resources.input.unix-x64}</directory>
                      <excludes>
                        <exclude>**/*.cpp</exclude>
                        <exclude>**/.vscode/**</exclude>
                      </excludes>
                      <filtering>false</filtering>
                    </resource>
                  </resources>
                </configuration>
              </execution>
            </executions>
          </plugin>

          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>${exec-maven-plugin.version}</version>
            <executions>
              <execution>
                <id>compile-png-unix-x64</id>
                <goals>
                  <goal>exec</goal>
                </goals>
                <phase>process-resources</phase>
                <configuration>
                  <executable>g++</executable>
                  <arguments>
                    <argument>-O3</argument>
                    <argument>-c</argument>
                    <argument>-fPIC</argument>
                    <argument>-o</argument>
                    <argument>${java.io.tmpdir}/pngutils.o</argument>
                    <argument>${project.resources.input.common}/pngutils.cpp</argument>
                  </arguments>
                </configuration>
              </execution>

              <execution>
                <id>link-png-unix-x64</id>
                <goals>
                  <goal>exec</goal>
                </goals>
                <phase>process-resources</phase>
                <configuration>
                  <executable>g++</executable>
                  <arguments>
                    <argument>-O3</argument>
                    <argument>-shared</argument>
                    <argument>-o</argument>
                    <argument>${project.resources.output}/pngutils.so</argument>
                    <argument>${java.io.tmpdir}/pngutils.o</argument>
                    <argument>-Wl,-rpath=./</argument>
                    <argument>-lpng</argument>
                  </arguments>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>platform-windows-x64</id>
      <activation>
        <os>
          <family>windows</family>
        </os>
      </activation>
      <properties>
        <project.resources.input.windows-x64>${project.resources.input}/windows-x64</project.resources.input.windows-x64>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-resources-plugin</artifactId>
            <version>${maven-resources-plugin.version}</version>
            <executions>
              <execution>
                <id>process-resouces-windows-x64</id>
                <goals>
                  <goal>copy-resources</goal>
                </goals>
                <phase>process-resources</phase>
                <configuration>
                  <outputDirectory>${project.resources.output}</outputDirectory>
                  <resources>
                    <resource>
                      <directory>${project.resources.input.common}</directory>
                      <excludes>
                        <exclude>**/*.cpp</exclude>
                        <exclude>**/.vscode/**</exclude>
                      </excludes>
                      <filtering>false</filtering>
                    </resource>

                    <resource>
                      <directory>${project.resources.input.windows-x64}</directory>
                      <excludes>
                        <exclude>**/*.cpp</exclude>
                        <exclude>**/.vscode/**</exclude>
                      </excludes>
                      <filtering>false</filtering>
                    </resource>
                  </resources>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
